Added dynamic shader buffer swapping